tests/NormalTests/paczka1/small_fuzzy/78583530.err
Error in line 1: 7nqPug S713 77,7
Error in line 4: zJBvpTWQ7 A626 19,68
Error in line 6: YanUKDIdqP A626 80,3
Error in line 7: YanUKDIdqP A190 83,2
